--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,10 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "angular": "~1.4.7",
+    "angular-ui-router": "~0.2.15",
+    "angular-google-maps": "~2.2.1",
+    "angular-bootstrap": "~0.14.2"
   }
 }
