--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "angular": "~1.4.7",
     "angular-ui-router": "~0.2.15",
     "angular-google-maps": "~2.2.1",
-    "angular-bootstrap": "~0.14.2"
+    "angular-bootstrap": "~0.14.2",
+    "angular-md5": "~0.1.8"
   }
 }
