--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ node_modules
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 bower_components
 /bower_components.zip
+/deploy/delivery
+/dist
