--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "angular-google-maps": "~2.2.1",
     "angular-bootstrap": "~0.14.2",
     "angular-md5": "~0.1.8",
-    "angular-sanitize": "~1.4.7"
+    "angular-sanitize": "~1.4.7",
+    "font-awesome": "~4.5.0"
   }
 }
